brain/sources/prod-metadata/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Identifies the role this contact plays in the client hiring process. Used to determine who receives candidate submissions and interview communications.</description>
    <inlineHelpText>Select the contact role in the hiring process. Hiring Manager = decision maker. HR = HR coordinator. Vendor Manager = vendor side coordinator.</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Vendor Manager</fullName>
            </value>
            <value>
                <fullName>Technical Panel</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>