brain/sources/prod-metadata/objects/Contact/fields/Primary_Submission_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Submission_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this contact as the primary recipient for candidate profile submissions. Only one contact per account should be marked as primary.</description>
    <inlineHelpText>Check for the main contact who should receive candidate submission emails. Only one contact per client should have this checked.</inlineHelpText>
    <label>Primary Submission Contact</label>
    <type>Checkbox</type>
</CustomField>