brain/sources/prod-metadata/objects/Contact/fields/Receives_Submission_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receives_Submission_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this contact should be included in candidate submission email communications. Multiple contacts can be marked. Used for CC recipients.</description>
    <inlineHelpText>Check if this contact should receive emails when candidate profiles are submitted. Used for CC recipients in addition to Primary Submission Contact.</inlineHelpText>
    <label>Receives Submission Emails</label>
    <type>Checkbox</type>
</CustomField>