brain/sources/prod-metadata/objects/Contact/fields/Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submission_Notes__c</fullName>
    <description>Client-specific instructions for submitting candidates to this contact. May include formatting preferences, required info, communication style.</description>
    <inlineHelpText>Enter any special instructions for submitting profiles to this contact. Example: Always send application in PDF format, Include LinkedIn URL, Do not mention rate, etc.</inlineHelpText>
    <label>Submission Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>